v2.5/_sources/orphans.rst.txt
:orphan:

Orphans
#########

.. toctree::
    :maxdepth: 1

    global
    page_getting_started_cpp
    page_memory_format_propagation_cpp
    page_performance_profiling_cpp
    page_cross_engine_reorder_cpp
    page_cross_engine_reorder_c
    page_sycl_interop_buffer_cpp
    page_gpu_opencl_interop_cpp
    page_bnorm_u8_via_binary_postops_cpp
    page_cnn_inference_f32_cpp
    page_cnn_inference_f32_c
    page_cpu_rnn_inference_f32_cpp
    page_cnn_inference_int8_cpp
    page_cpu_rnn_inference_int8_cpp
    page_cnn_training_f32_cpp
    page_cpu_cnn_training_f32_c
    page_rnn_training_f32_cpp
    page_cnn_training_bf16_cpp
    example_batch_normalization.cpp.rst
    example_binary.cpp.rst
    example_bnorm_u8_via_binary_postops.cpp.rst
    example_cnn_inference_f32.c.rst
    example_cnn_inference_f32.cpp.rst
    example_cnn_inference_int8.cpp.rst
    example_cnn_training_bf16.cpp.rst
    example_cnn_training_f32.cpp.rst
    example_concat.cpp.rst
    example_convolution.cpp.rst
    example_cpu_cnn_training_f32.c.rst
    example_cpu_matmul_quantization.cpp.rst
    example_cpu_rnn_inference_f32.cpp.rst
    example_cpu_rnn_inference_int8.cpp.rst
    example_cpu_sgemm_and_matmul.cpp.rst
    example_cross_engine_reorder.c.rst
    example_cross_engine_reorder.cpp.rst
    example_eltwise.cpp.rst
    example_getting_started.cpp.rst
    example_gpu_opencl_interop.cpp.rst
    example_inference_int8_matmul.cpp.rst
    example_inner_product.cpp.rst
    example_layer_normalization.cpp.rst
    example_logsoftmax.cpp.rst
    example_lrn.cpp.rst
    example_lstm.cpp.rst
    example_matmul.cpp.rst
    example_memory_format_propagation.cpp.rst
    example_performance_profiling.cpp.rst
    example_pooling.cpp.rst
    example_prelu.cpp.rst
    example_reduction.cpp.rst
    example_reorder.cpp.rst
    example_resampling.cpp.rst
    example_rnn_training_f32.cpp.rst
    example_shuffle.cpp.rst
    example_softmax.cpp.rst
    example_sum.cpp.rst
    example_sycl_interop_buffer.cpp.rst
    page_batch_normalization_example_cpp.rst
    page_batch_normalization_example_cpp_short.rst
    page_binary_example_cpp.rst
    page_binary_example_cpp_short.rst
    page_bnorm_u8_via_binary_postops_cpp_short.rst
    page_concat_example_cpp.rst
    page_concat_example_cpp_short.rst
    page_convolution_example_cpp.rst
    page_convolution_example_cpp_short.rst
    page_cpu_matmul_quantization_cpp.rst
    page_cpu_matmul_quantization_cpp_short.rst
    page_cpu_sgemm_and_matmul_cpp.rst
    page_cpu_sgemm_and_matmul_cpp_short.rst
    dev_guide_attributes_post_ops.rst
    dev_guide_attributes_quantization.rst
    dev_guide_attributes_scratchpad.rst
    dev_guide_conventions.rst
    dev_guide_dpcpp_backends.rst
    dev_guide_dpcpp_interoperability.rst
    dev_guide_examples.rst
    dev_guide_inference.rst
    dev_guide_inference_int8.rst
    dev_guide_opencl_interoperability.rst
    dev_guide_training.rst
    dev_guide_training_bf16.rst
    dev_guide_vtune.rst
    page_eltwise_example_cpp.rst
    page_eltwise_example_cpp_short.rst
    page_inference_int8_matmul_cpp.rst
    page_inference_int8_matmul_cpp_short.rst
    page_inner_product_example_cpp.rst
    page_inner_product_example_cpp_short.rst
    page_layer_normalization_example_cpp.rst
    page_layer_normalization_example_cpp_short.rst
    page_legal_information.rst
    page_logsoftmax_example_cpp.rst
    page_logsoftmax_example_cpp_short.rst
    page_lrn_example_cpp.rst
    page_lrn_example_cpp_short.rst
    page_lstm_example_cpp.rst
    page_lstm_example_cpp_short.rst
    page_matmul_example_cpp.rst
    page_matmul_example_cpp_short.rst
    page_pooling_example_cpp.rst
    page_pooling_example_cpp_short.rst
    page_prelu_example_cpp.rst
    page_prelu_example_cpp_short.rst
    page_reduction_example_cpp.rst
    page_reduction_example_cpp_short.rst
    page_reorder_example_cpp.rst
    page_reorder_example_cpp_short.rst
    page_resampling_example_cpp.rst
    page_resampling_example_cpp_short.rst
    page_shuffle_example_cpp.rst
    page_shuffle_example_cpp_short.rst
    page_softmax_example_cpp.rst
    page_softmax_example_cpp_short.rst
    page_sum_example_cpp.rst
    page_sum_example_cpp_short.rst
    page_todo.rst
